--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "react-native": "0.50.3",
     "react-native-animatable": "^1.2.4",
     "react-native-dropdownalert": "^3.3.0",
+    "react-native-image-pan-zoom": "^2.0.16",
+    "react-native-image-picker": "^0.26.7",
+    "react-native-image-zoom-viewer": "^2.0.20",
     "react-native-material-bottom-navigation": "^0.8.2",
     "react-native-material-design-searchbar": "^1.8.0",
     "react-native-progress": "^3.4.0",
