--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.50.3",
     "react-native-animatable": "^1.2.4",
     "react-native-dropdownalert": "^3.3.0",
+    "react-native-elements": "^0.19.0",
     "react-native-image-pan-zoom": "^2.0.16",
     "react-native-image-picker": "^0.26.7",
     "react-native-image-zoom-viewer": "^2.0.20",
@@ -36,6 +37,7 @@
     "react-native-search-bar": "^3.4.0",
     "react-native-selectablesectionlistview": "^0.4.0",
     "react-native-swipeable-parallax-carousel": "^1.1.0",
+    "react-native-textinput-effects": "^0.4.2",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.2.1"
   }
